--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-parallax": "^3.5.1",
+    "react-parallax-tilt": "^1.7.232",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.1",
     "react-simple-captcha": "^9.3.1",
