--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.2",
     "recharts": "^2.12.7",
+    "sonner": "^1.7.1",
     "sweetalert2": "^11.12.2",
     "swiper": "^11.1.11"
   },
